Cleanup LFU_SS